package cn.smileyan.dp.product;

/**
 * 抽象产品接口 - 处理器
 * @author Smileyan
 */
public interface Cpu {
    /**
     * 处理器核心功能
     */
    void process();
}
