package cn.smileyan.dp.product;

/**
 * 显卡
 * @author Smileyan
 */
public interface GraphicsCard {
    /**
     * 图像绘制
     */
    void display();
}
