package cn.smileyan.dp.product;

/**
 * 抽象产品接口 - 内存
 * @author Smileyan
 */
public interface Memory {
    /**
     * 存储
     */
    void store();
}
