@startuml

interface CPU {
    + process()
}

interface Memory {
    + store()
}

interface GraphicsCard {
    + display()
}

interface ComputerFactory {
    + createCPU(): CPU
    + createMemory(): Memory
    + createGraphicsCard(): GraphicsCard
}

class IntelCPU {
    + process()
}

class KingstonMemory {
    + store()
}

class NVIDIAGraphicsCard {
    + display()
}

class IntelComputerFactory {
    + createCPU(): CPU
    + createMemory(): Memory
    + createGraphicsCard(): GraphicsCard
}

class AMDCPU {
    + process()
}

class CorsairMemory {
    + store()
}

class AMDGraphicsCard {
    + display()
}

class AMDComputerFactory {
    + createCPU(): CPU
    + createMemory(): Memory
    + createGraphicsCard(): GraphicsCard
}

ComputerFactory <|.. IntelComputerFactory
ComputerFactory <|.. AMDComputerFactory

ComputerFactory <|-- IntelComputerFactory
CPU <|.. IntelCPU
Memory <|.. KingstonMemory
GraphicsCard <|.. NVIDIAGraphicsCard

ComputerFactory <|-- AMDComputerFactory
CPU <|.. AMDCPU
Memory <|.. CorsairMemory
GraphicsCard <|.. AMDGraphicsCard

@enduml
